--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -11,8 +11,10 @@
 \usepackage{color}
 \usepackage{stmaryrd}         % Crochet double barre (entiers)
 \usepackage{xargs}
+\usepackage{overpic}
 
 \input{aux/commands}
+\graphicspath{{figures/}} % les repertoires ou se trouvent les figures
 
 % -----------------------------------------------------------------
 
