--- a/paper/aux/commands.tex
+++ b/paper/aux/commands.tex
@@ -15,8 +15,6 @@
 \SetKwInput{KwInput}{Input}                % Set the Input
 \SetKwInput{KwOutput}{Output}              % set the Output
 
-\usepackage{overpic}
-
 %MARGINS
 
 \setlength{\textwidth}{\paperwidth}
@@ -105,7 +103,8 @@
 %Hyperplane arrangements
 \renewcommand{\b}[1]{\boldsymbol{#1}} % bold
 \newcommandx{\arrangement}[1][1 = A]{\mathcal{#1}} % arrangement
-\newcommandx{\braidArrangement}[1][1 = n]{\arrangement_{#1}} % braid arrangement
+\newcommandx{\braidArrangement}[1][1 = n]{\arrangement[B]_{#1}} % braid arrangement
+\newcommandx{\lBraidArrangement}[2][1 = n, 2 = \ell]{\arrangement[B]_{#1}^{#2}} % (l,n)-braid arrangement
 \newcommandx{\rank}[1][1 = \arrangement]{\operatorname{rk}(#1)} % rank
 \newcommandx{\facePoset}[1][1 = \arrangement]{\mathsf{Fa}(#1)} % face poset
 \newcommandx{\fPol}[2][1 = \arrangement, 2 = x]{\b{f}_{#1}(#2)} % face polynomial
@@ -113,6 +112,8 @@
 \newcommandx{\flatPoset}[1][1 = \arrangement]{\mathsf{Fl}(#1)} % intersection poset
 \newcommandx{\charPol}[2][1 = y, 2 = \arrangement]{\b{\chi}_{#2}(#1)} % characteristic polynomial
 \newcommandx{\mobPol}[3][1 = x, 2 = y, 3 = \arrangement]{\b{\mu}_{#3}(#1, #2)} % Mobius polynomial
+\newcommandx{\partitionPoset}[1][1 = n]{\mathsf{Pa}_{#1}} % partition poset
+\newcommandx{\forestPoset}[2][1 = n, 2 = \ell]{\mathsf{Fo}_{#1}^{#2}} % forest poset
 
 %Colors
 \newcommand{\0}{\color{blue}{\mathsf{0}}}
